# python-project-lvl2

./: .coverage  .editorconfig  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yaml  pyci.yml
gendiff/: __init__.py  comparator.py  format_utils.py  formatter.py  gendiff.py  reader.py
gendiff/formatters/: format_utils.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: debug.py  gendiff.py
tests/: test_cli.py  test_comparator.py  test_console_app.py  test_diff.py  test_diff_flat_files.py  test_end_to_end.py  test_flat_json.py  test_formatter.py  test_library.py  test_reader.py
tests/fixtures/: file1.json  file2.json  result_json  result_stylish
tests/fixtures/expected/: compare_flat.json  compare_flat_reversed.json  compare_nested.json  compare_nested_reversed.json  format_json_output.txt  sample.json
tests/fixtures/hexlet/: diffs.txt
